# SIA

./: README.md
MonteCarlo/: mc_int  mc_int.cpp
sia_td1/data/: deuxPlans.exr  deuxSpheres.exr  deuxSpheres.scn  killeroo_area.exr  killeroo_area.scn  troisSpheres.scn  tw.exr  tw_area.exr  tw_area.scn
sia_td1/rapport/: index.html
sia_td1/src/: ao.cpp  areaLight.cpp  viewer.cpp  warp.cpp  whitted.cpp
sia_td2/data/: sphereWard.scn  sphereWardEnvMap.exr  sphereWardEnvMap.scn  ward.exr
sia_td2/include/: material.h
sia_td2/rapport/: index.html
sia_td2/src/: direct_mats.cpp  material.cpp  viewer.cpp  ward.cpp
sia_td4/src/: areaLight.cpp  photonmapper.cpp  scene.cpp  viewer.cpp
sia_td5/: CMakeLists.txt
sia_td5/data/shaders/: deferred.frag  deferred.vert  gbuffer.frag  gbuffer.vert
sia_td5/include/: fbo.h  viewer.h
sia_td5/src/: fbo.cpp  viewer.cpp
sia_td6/include/: mesh.h  viewer.h
sia_td6/src/: mesh.cpp  viewer.cpp
sia_td7/data/models/: bunny_70k_color.off
sia_td7/ext/surface_mesh/: surface_mesh.h
sia_td7/sia_td7_labbe/: CMakeLists.txt
sia_td7/sia_td7_labbe/data/shaders/: blinn.frag  blinn.vert
sia_td7/sia_td7_labbe/ext/surface_mesh/: types.h
sia_td7/sia_td7_labbe/src/: bvh.h  laplacian.cpp  laplacian.h  main.cpp  mesh_processing_app.cpp  neighborhood.h  ray.h  viewer.cpp  viewer.h
sia_td7/src/: bvh.cpp  mesh.cpp  mesh.h  mesh_processing_app.h  neighborhood.cpp
sia_td8/: CMakeLists.txt
sia_td8/Rapport/: index.html  style.css
sia_td8/data/models/: girlSphere.txt
sia_td8/data/shaders/: simple.frag
sia_td8/ext/SOIL/: CMakeLists.txt
sia_td8/include/: bvh.h  integration.h  mesh.h  particles.h  ray.h  viewer.h
sia_td8/src/: bvh.cpp  integration.cpp  main.cpp  mesh.cpp  particles.cpp  viewer.cpp
